fixed stretched attorney images

--- a/src/sass/import/_attorneys-archive-img.scss
+++ b/src/sass/import/_attorneys-archive-img.scss
@@ -2,11 +2,11 @@
 	position: relative;
 	> img {
 		// max-height: 50rem;
-		width: auto;
+		// width: auto;
 		margin-left: auto;
 		margin-right: auto;
 		max-width: 100%;
-		height: auto;
+		// height: auto;
 	}
 }
 .archive-attorney {
